# 4-sem-oop

./: .gitignore
exam/: notes.docx  quesstions_01.docx  quesstions_02.docx
lab_01/: main.cpp
lab_01/files/: outmodel.txt
lab_01/interface_domain/: viewer.cpp  viewer.h  viewer.ui
lab_01/logic_domain/edges/: edge.cpp  edge.h  edges.cpp  edges.h
lab_01/logic_domain/model/: errors.h  manager.cpp  manager.h  model2D.cpp  model2D.h  model3D.cpp  model3D.h  model_params.h
lab_01/logic_domain/points/point2D/: point2D.cpp  point2D.h  points2D.cpp  points2D.h
lab_01/logic_domain/points/point3D/: point3D.cpp  point3D.h  points3D.cpp  points3D.h
lab_02/: CMakeLists.txt  const_matrix_iterator.h  main.cpp  matrix.h  matrix_iterator.h
lab_02/matrix/: matrix.h  matrix.hpp  matrix_base.hpp
lab_03/: CMakeLists.txt  main.cpp  readme.md  tasks.txt
lab_03/Drawer/: BaseDrawer.cpp  BaseDrawer.h  QtDrawer.cpp  QtDrawer.h
lab_03/Drawer/DrawerFactory/: BaseDrawerCreator.h  BaseDrawerFactory.cpp  BaseDrawerFactory.h  QtDrawerCreator.cpp  QtDrawerCreator.h  QtDrawerFactory.cpp  QtDrawerFactory.h
lab_03/Model/Commands/: BaseCommand.h  DrawCommand.cpp  DrawCommand.h  LoadCommand.cpp  LoadCommand.h  MoveCameraCommand.cpp  MoveCameraCommand.h  MoveObjectCommand.cpp  MoveObjectCommand.h  RotateCameraCommand.cpp  RotateCameraCommand.h  RotateObjectCommand.cpp  RotateObjectCommand.h  ScaleObjectCommand.cpp  ScaleObjectCommand.h  UndoCommand.cpp  UndoCommand.h
lab_03/Model/Containers/matrix/iterator/: const_matrix_iterator.h  matrix_iterator.h
lab_03/Model/Containers/matrix/matrix/: matrix.h  matrix.hpp
lab_03/Model/Errors/: Exception.cpp  Exception.h
lab_03/Model/Facade/: Facade.cpp  Facade.h
lab_03/Model/Figure/: BaseObject.cpp  BaseObject.h
lab_03/Model/Figure/CompositeObject/: CompositeObject.cpp  CompositeObject.h
lab_03/Model/Figure/InvisibleObject/: InvisibleObject.cpp  InvisibleObject.h
lab_03/Model/Figure/InvisibleObject/Camera/: BaseCamera.cpp  BaseCamera.h  Camera.cpp  Camera.h
lab_03/Model/Figure/ObjectFactory/: BaseObjectFactory.h  ObjectFactory.cpp  ObjectFactory.h
lab_03/Model/Figure/Primitives/: Primitive.cpp  Primitive.h
lab_03/Model/Figure/Primitives/Edge/: Edge.cpp  Edge.h
lab_03/Model/Figure/Primitives/Point/: Point.cpp  Point.h
lab_03/Model/Figure/VisibleObject/: VisibleObject.cpp  VisibleObject.h
lab_03/Model/Figure/VisibleObject/CompositeObject/: CompositeObject.h
lab_03/Model/Figure/VisibleObject/CompositeObject/FrameModel/: FrameModel.cpp  FrameModel.h
lab_03/Model/Figure/VisibleObject/CompositeObject/FrameModel/FrameModelBuilder/: BaseFrameModelBuilder.h  BaseFrameModelDirector.h  FrameModelBuilder.cpp  FrameModelBuilder.h  FrameModelDirector.cpp  FrameModelDirector.h
lab_03/Model/Figure/VisibleObject/Edge/: BaseEdge.cpp  BaseEdge.h  Edge.cpp  Edge.h
lab_03/Model/Figure/VisibleObject/FrameModel/: FrameModel.cpp  FrameModel.h
lab_03/Model/Figure/VisibleObject/FrameModel/FrameModelBuilder/: BaseFrameModelBuilder.h  BaseFrameModelDirector.h  FrameModelBuilder.cpp  FrameModelBuilder.h  FrameModelDirector.cpp
lab_03/Model/Figure/VisibleObject/Point/: BasePoint.cpp  BasePoint.h  Point.cpp  Point.h
lab_03/Model/Handlers/: BaseHandler.cpp  BaseHandler.h  DrawHandler.cpp  DrawHandler.h  LoadHandler.cpp  LoadHandler.h  MoveCameraHandler.cpp  MoveCameraHandler.h  MoveObjectHandler.cpp  MoveObjectHandler.h  ProjectionHandler.cpp  ProjectionHandler.h  RotateCameraHandler.cpp  RotateCameraHandler.h  RotateObjectHandler.cpp  RotateObjectHandler.h  ScaleObjectHandler.cpp  ScaleObjectHandler.h
lab_03/Model/Loader/: BaseCameraLoader.h  BaseLoader.h  BaseModelLoader.h  BaseSceneLoader.h  FileCameraLoader.cpp  FileCameraLoader.h  FileModelLoader.cpp  FileModelLoader.h  FileSceneLoader.cpp  FileSceneLoader.h
lab_03/Model/Loader/LoaderCreator/: BaseLoaderCreator.h  FileLoaderCreator.cpp  FileLoaderCreator.h
lab_03/Model/Scene/: BaseScene.cpp  BaseScene.h  Scene.cpp  Scene.h
lab_03/Model/Scene/SceneBuilder/: BaseSceneBuilder.h  BaseSceneDirector.h  SceneBuilder.cpp  SceneBuilder.h  SceneDirector.cpp  SceneDirector.h
lab_03/Model/Snapshots/: Caretaker.cpp  Caretaker.h  Snapshot.cpp  Snapshot.h
lab_03/Model/Solution/: Configuration.cpp  Configuration.h  GraphicsSolution.cpp  GraphicsSolution.h  LoaderSolution.cpp  LoaderSolution.h
lab_03/Model/Visitors/: BaseVisitor.cpp  BaseVisitor.h  DrawObjectVisitor.cpp  DrawObjectVisitor.h  MoveObjectVisitor.cpp  MoveObjectVisitor.h  ProjectionVisitor.cpp  ProjectionVisitor.h  TransformObjectVisitor.cpp  TransformObjectVisitor.h
lab_03/View/: view.cpp  view.h  view.ui
lab_03/controller/: Controller.cpp  controller.h
lab_03/files/: config.txt  model.txt
lab_03/uml/: lab_03_remade.mdj  uml.mdj
lab_04/: CMakeLists.txt  constants.h  main.cpp
lab_04/cabin/: cabin.cpp  cabin.h
lab_04/door/: door.cpp  door.h
lab_04/lift/: lift.cpp  lift.h
lab_04/panel/: panel.cpp  panel.h
lab_04/view/: view.cpp  view.h  view.ui
lections/: lec_06.docx  lec_07.docx  lec_08.docx  lec_09.docx  lec_09_new.docx  lec_11.docx  lec_12.docx  lec_13.docx  lec_15.docx
